# opengl_thing

./: CMakeLists.txt
src/: CMakeLists.txt  gl_renderer.cpp  gl_renderer.hpp  main.cpp
